# 1PhoneMirror

./: .gitignore  AGENTS.md  CMakeLists.txt  DISTRIBUTION.md  GETTING_STARTED.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  TODO.md  package.ps1
.github/workflows/: release.yml  winget.yml
include/openmirror/: app.h  config.h  log_buffer.h  settings.h
include/openmirror/airplay/: airplay_server.h  bplist.h  mdns_service.h  mirror_buffer.h  pairing.h  srp_pin.h
include/openmirror/android/: scrcpy_receiver.h
include/openmirror/cast/: cast_receiver.h
include/openmirror/media/: audio_output.h  decoder.h  ocr.h  phone_frame.h  recorder.h  renderer.h
include/openmirror/miracast/: miracast_receiver.h
include/openmirror/network/: rtsp_server.h  tcp_server.h  telemetry.h  update_check.h
include/opm/: app.h  config.h  log_buffer.h  settings.h
include/opm/airplay/: airplay_server.h  bplist.h  mdns_service.h  mirror_buffer.h  pairing.h  srp_pin.h
include/opm/android/: scrcpy_receiver.h
include/opm/cast/: cast_receiver.h
include/opm/media/: audio_output.h  decoder.h  ocr.h  phone_frame.h  recorder.h  renderer.h  webcam.h
include/opm/miracast/: miracast_receiver.h
include/opm/network/: rtsp_server.h  tcp_server.h  telemetry.h  update_check.h
installer/: 1PhoneMirror.wxs  License.rtf  THIRD_PARTY_LICENSES.txt
lib/: stb_image_impl.c  stb_image_write_impl.c
manifests/m/MSEndpointMgr/1PhoneMirror/0.3.5/: MSEndpointMgr.1PhoneMirror.installer.yaml  MSEndpointMgr.1PhoneMirror.locale.en-US.yaml  MSEndpointMgr.1PhoneMirror.yaml
resources/: 1phonemirror.rc  openmirror.rc
scripts/: build.ps1  setup_deps.ps1
src/: app.cpp  main.cpp  settings.cpp
src/airplay/: airplay_mirror.cpp  airplay_server.cpp  bplist.cpp  mdns_service.cpp  mdns_service.cpp.bak  mirror_buffer.cpp  pairing.cpp  srp_pin.cpp
src/android/: android_dialog.cpp  scrcpy_receiver.cpp
src/cast/: cast_proto.h  cast_receiver.cpp
src/media/: audio_output.cpp  decoder.cpp  ocr.cpp  phone_frame.cpp  recorder.cpp  renderer.cpp  webcam.cpp
src/miracast/: miracast_receiver.cpp
src/network/: rtsp_server.cpp  tcp_server.cpp  telemetry.cpp  update_check.cpp
telemetry/: .gitignore  README.md  azure.yaml  workbook.json
telemetry/infra/: abbreviations.json  main.bicep  resources.bicep
telemetry/src/: DownloadFunction.cs  HealthFunction.cs  PingFunction.cs  Program.cs  Telemetry.csproj
tools/: README.md
